manifests/old-ingress/argocd_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: "selfsigned-issuer"
    konghq.com/strip-path: "false"
    
spec:
  ingressClassName: kong
  tls:
  - hosts:
    - argocd.henrique.local
    secretName: argocd-tls
  rules:
  - host: argocd.henrique.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80
